Updated 13 files via CloudCannon.

--- a/Experiences.html
+++ b/Experiences.html
@@ -9,8 +9,8 @@ blocks:
         block-content-html: ''
         videos:
             -
-                video_path:
-                video_type:
+                video_path: /uploads/surf.mp4
+                video_type: mp4
         placeholder_image: /uploads/experiences-banner.jpg
         controls: false
         autoplay: true
@@ -36,7 +36,7 @@ blocks:
         _id: offset-grid
         content-1:
             subHeading: GATEWAY TO BALI
-            heading: 
+            heading:
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod  tempor incididunt ut labore et dolore magna
@@ -50,7 +50,7 @@ blocks:
             title: Experience
         content-2:
             subHeading: IN THE HEART OF CANGGU
-            heading: 
+            heading:
             p-text: >-
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                 do eiusmod tempor incididunt ut labore et dolore magna
@@ -69,10 +69,9 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="sub-heading">AT THE RESORT &amp;
-            NEARBY</h3><p class=""> </p><h2
-            class="large-heading">Experiences at Regent Bali Canggu</h2><p
-            class="">Lorem ipsum dolor sit amet, consectetur
+            <h3 class="sub-heading">AT THE RESORT &amp; NEARBY</h3><p class="">
+            </p><h2 class="large-heading">Experiences at Regent Bali
+            Canggu</h2><p class="">Lorem ipsum dolor sit amet, consectetur
             adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
             exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -82,7 +81,7 @@ blocks:
         mobile-image-width: 80%
         img_aspect: Wide Landscape
         col:
-                color-scheme: base
+            color-scheme: base
         scroll-items:
             -
                 image: /uploads/experiences1.jpg
@@ -115,19 +114,19 @@ blocks:
     -
         _id: horizontal-scroll-basic
         block-content-html: >-
-            <h3 class="sub-heading">AROUND THE ISLAND</h3><p
-            class=""> </p><h2 class="large-heading">Explore the island
-            with curated experiences</h2><p class="">Lorem ipsum
-            dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-            ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <h3 class="sub-heading">AROUND THE ISLAND</h3><p class=""> </p><h2
+            class="large-heading">Explore the island with curated
+            experiences</h2><p class="">Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit
+            esse cillum dolore eu fugiat nulla pariatur.</p>
         image-width: max(80%, 8rem)
         mobile-image-width: 80%
         img_aspect: Wide Landscape
         col:
-                color-scheme: base
+            color-scheme: base
         scroll-items:
             -
                 image: /uploads/experience3.jpg
@@ -141,7 +140,7 @@ blocks:
                 reserve-link:
                 button:
                     text: learn more
-                    url: #
+                    url:
             -
                 image: /uploads/experience4.jpg
                 block-content-html: >-
@@ -156,7 +155,7 @@ blocks:
                 reserve-link:
                 button:
                     text: learn more
-                    url: #
+                    url:
         color-scheme: dark
 seo:
     title: Regent Website Proposal | Kelapa Creative
