--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -9,8 +9,8 @@ blocks:
         block-content-html: ''
         videos:
             -
-                video_path:
-                video_type:
+                video_path: /uploads/beach-villa.mp4
+                video_type: mp4
         placeholder_image: /uploads/suites-villas-1.jpg
         controls: false
         autoplay: true
@@ -46,8 +46,8 @@ blocks:
                         bed-size: KING BED
                         sleeps: 2
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Gaze across the Indian Ocean from your private
                             balcony. Indoors find a king bed and a serene
@@ -60,8 +60,8 @@ blocks:
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Positioned within lush tropical landscapes, the
                             Studio Suite draws  upon the artistry of Indonesian
@@ -79,8 +79,8 @@ blocks:
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Positioned within lush tropical landscapes, the
                             Studio Suite draws  upon the artistry of Indonesian
@@ -102,8 +102,8 @@ blocks:
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Perched above the coastline, this One Bedroom Suite
                             pairs tranquil seclusion with sweeping ocean views.
@@ -116,8 +116,8 @@ blocks:
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Positioned within lush tropical landscapes, the
                             Studio Suite draws  upon the artistry of Indonesian
@@ -135,8 +135,8 @@ blocks:
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Positioned within lush tropical landscapes, the
                             Studio Suite draws  upon the artistry of Indonesian
@@ -158,8 +158,8 @@ blocks:
                         bed-size: KING BED & TWIN BEDS
                         sleeps: 6
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Tailored for families, this spacious suite features
                             two bedrooms and seamless access to the tranquil
@@ -172,8 +172,8 @@ blocks:
                         bed-size: king bed-size
                         sleeps: 2
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Positioned within lush tropical landscapes, the
                             Studio Suite draws  upon the artistry of Indonesian
@@ -195,8 +195,8 @@ blocks:
                         bed-size: KING BED
                         sleeps: 4
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             With panoramic views of the Indian Ocean, this
                             generously sized suite captures the essence of
@@ -210,8 +210,8 @@ blocks:
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: ''
                     -
                         name: Garden View King
@@ -219,8 +219,8 @@ blocks:
                         bed-size: ''
                         sleeps: 0
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: ''
             -
                 heading: PRIVATE VILLAS
@@ -232,8 +232,8 @@ blocks:
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             Awaken to sweeping ocean views from the master
                             bedroom, living room, and your private 30 sqm pool.
@@ -259,8 +259,8 @@ blocks:
                         bed-size: 'KING BED & Twin Beds '
                         sleeps: 6
                         extra-feature:
-                            - 
-                            - 
+                            -
+                            -
                         content: >-
                             The pinnacle of island living, the two-bedroom
                             penthouse offers uninterrupted ocean views and a
