--- a/Wellness.html
+++ b/Wellness.html
@@ -9,8 +9,8 @@ blocks:
         block-content-html: ''
         videos:
             -
-                video_path:
-                video_type:
+                video_path: /uploads/meditation.mp4
+                video_type: mp4
         placeholder_image: /uploads/wellness-banner.jpg
         controls: false
         autoplay: true
