--- a/dining.html
+++ b/dining.html
@@ -2,15 +2,15 @@
 layout: default
 header:
     text-color: '#ffffff'
-    background-color-mobile: 'dark'
+    background-color-mobile: dark
 blocks:
     -
         _id: banner-video
         block-content-html: ''
         videos:
             -
-                video_path:
-                video_type:
+                video_path: /uploads/sazon.mp4
+                video_type: mp4
         placeholder_image: /uploads/dining-desktop.jpg
         controls: false
         autoplay: true
