--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 header:
-    text-color: '#fff'
+    text-color: '#ffffff'
     background-color-mobile: '#000'
 blocks:
     -
