--- a/dining-beach-house.html
+++ b/dining-beach-house.html
@@ -9,8 +9,8 @@ blocks:
         block-content-html: ''
         videos:
             -
-                video_path:
-                video_type:
+                video_path: /uploads/beachhouse.mp4
+                video_type: mp4
         placeholder_image: /uploads/dining-beach.jpg
         controls: false
         autoplay: true
