--- a/offers.html
+++ b/offers.html
@@ -9,8 +9,8 @@ blocks:
         block-content-html: ''
         videos:
             -
-                video_path:
-                video_type:
+                video_path: /uploads/drone-pools.mp4
+                video_type: mp4
         placeholder_image: /uploads/offers-banner.jpg
         controls: false
         autoplay: true
@@ -23,7 +23,9 @@ blocks:
         _id: offers
         sub-heading: OFFERS
         heading: Unwind in the idyllic setting of Regent Bali Canggu
-        description:  Enhance your  luxurious stay with exclusive offers and complimentary inclusions.
+        description: >-
+            Enhance your  luxurious stay with exclusive offers and complimentary
+            inclusions.
         events:
             -
                 heading: "A Club Like \LNo Other"
