--- a/index.html
+++ b/index.html
@@ -117,35 +117,51 @@ blocks:
         heading: The Highlights
         highlights:
             -
-                nav-heading: Finest Dining
-                heading: Dining Destination
-                image: /uploads/rg-brand-hotel-highlight-dining-2000x863.avif
+                nav-heading: Penthouse
+                heading: Above the Ocean, Beyond the Ordinary
+                image: /uploads/regent-bali-ph.avif
                 imag-alt:
-                text: At iconic restaurants with magnificent harbourviews, immersive culinary journeys go beyond the excellence of the cuisine itself with sensory encounters inspired by Hong Kong's rich culture and art, married with creativity, innovation and decadence.
+                text: Perched above the shoreline, the two-bedroom penthouse invites rare seclusion with sweeping ocean views, a private infinity pool, and personal cabana. Enjoy Regent Club access, bespoke in-residence breakfast, and a 60-minute Balinese massage, an experience of quiet indulgence, where every detail evokes refinement, privacy, and serene coastal living.
                 button-text: 
                 link:      
             -
-                nav-heading: Distinct Events
-                heading: Events & Celebrations
-                image:  /uploads/rg-brand-hotel-highlight-events-2000x863.avif
+                nav-heading: Festive Season
+                heading: Festive Celebrations
+                image:  /uploads/festive-season-highlight-image.avif
                 imag-alt:
-                text: Sophistication and style are hallmarks of glamorous galas, dream weddings and bespoke events that create lasting impressions. A legacy of crafting unforgettable celebrations is now thoughtfully re-envisioned to delight and inspire.
+                text: This festive season, indulge in extraordinary moments—flavours that linger, music that stirs the soul, and gatherings that become cherished memories. A celebration timeless, meaningful, and entirely your own.
                 button-text: 
                 link: 
             -
-                nav-heading: UNFORGETTABLE WEDDINGS
-                heading: Regent Weddings
-                image: /uploads/rg-brand-hotel-highlight-wedding-2000x863.webp
+                nav-heading: Events
+                heading: Exceptional Events, Rewarded
+                image: /uploads/regent-unite.avif
                 imag-alt: 
-                text: From show-stopping arrivals at the glistening entrance with its cascading <i>feng shui</i> fountain to the iconic white marble staircase leading to the glamorous Regent Ballroom, your Regent Wedding is crafted for everlasting memories.
+                text: Save up to 10% and earn 3X points with IHG Business Rewards. Limited-time offers for events at Regent Bali Canggu.
                 button-text: 
                 link:
             -
-                nav-heading: Regent Club
-                heading: Regent Club
-                image: /uploads/Regent_Club-Lounge_Area-cropped.avif
+                nav-heading: Spa & Wellness
+                heading: Sense of harmony
+                image: /uploads/regent-bali-8738348469-original.avif
                 imag-alt: 
                 text: Discover Regent Club, an exclusive private sanctuary and luxury residential retreat with bespoke service on your terms. Amidst sweeping harbourviews, delight in moments of decadence each day with immersive breakfast, afternoon tea and evening cocktail experiences. Unwind, recharge and be indulged in this elevated Personal Haven.
+                button-text: 
+                link:
+            -
+                nav-heading: Michelin Master Series
+                heading: Where Michelin Stars Take the Stage
+                image: /uploads/michelin-master-series-highlight-image.avif
+                imag-alt: 
+                text: Regent Bali Canggu unveils the Michelin Master Series — a showcase of culinary artistry and intimate dining. Each edition features Michelin-starred chefs from across Asia, expressing heritage and creativity through refined seasonal menus.
+                button-text: 
+                link:
+            -
+                nav-heading: Family Havens
+                heading: Timeless Stays, Shared Moments
+                image: /uploads/regent-balicanggu-familyhavens.avif
+                imag-alt: 
+                text: Crafted for togetherness, our family retreats combine generous space, curated activities, and bespoke experiences designed for all ages. Enhanced with exclusive benefits, each stay becomes a chapter of cherished family memories.
                 button-text: 
                 link:
         
