index design tweaks

--- a/temp.html
+++ b/temp.html
@@ -19,6 +19,20 @@ blocks:
         overlay-opacity: 0.5op
         min-height: 90vh
         color-scheme: dark
+
+    - 
+        _id: gallery
+        heading: Regent Bali Canggu Gallery 
+        images: 
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 1
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 1
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 1
     - 
         _id: highlights
         heading: The Highlights
