--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ blocks:
                 background-desktop-image: /uploads/taru1.jpg
                 background-mobile-image: /uploads/taru1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">TARU</h2><p>The signature culinary destination of the resort, Taru offers an immersive dining experience, through reinvented authentic flavours of essential Indonesian dishes, innovated by touches of modern cooking techniques and ingredients, balanced with contrasting international specialties.</p><p>Open 7am - 10pm everyday. </p>
+                    <h3 class="heading-lg h2">Taur</h2><p>The signature culinary destination of the resort, Taru offers an immersive dining experience, through reinvented authentic flavours of essential Indonesian dishes, innovated by touches of modern cooking techniques and ingredients, balanced with contrasting international specialties.</p><p>Open 7am - 10pm everyday. </p>
                 button-link: #
                 button-text: Explore Taru
 
@@ -186,7 +186,7 @@ blocks:
                 background-desktop-image: /uploads/beach-house-1.jpg
                 background-mobile-image: /uploads/beach-house-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">BEACH HOUSE</h2><p>A stunning addition to the Canggu coastline, the Beach House lures with its shimmering pool, and ocean breeze. An ideal setting for craft cocktails and the delicate flavours of the sea.</p><p>Open 8am - 10pm everyday. </p>
+                    <h3 class="heading-lg h2">Beach house</h2><p>A stunning addition to the Canggu coastline, the Beach House lures with its shimmering pool, and ocean breeze. An ideal setting for craft cocktails and the delicate flavours of the sea.</p><p>Open 8am - 10pm everyday. </p>
                 button-link: #
                 button-text: Explore Beach house
 
@@ -194,7 +194,7 @@ blocks:
                 background-desktop-image: /uploads/sazon-1.jpg
                 background-mobile-image: /uploads/sazon-1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">SAZON</h2><p>Led by award-winning Chef Andrew Walsh, experience the neighborhood Spanish hideaway on Batu Bolong, where vibrant atmosphere meets authentic flavours.</p><p>Open 8am - 10pm everyday. </p> <p>Mon - Thurs Open 8am - 9pm<br>Fri - Sat Open Noon - 4am</p>
+                    <h3 class="heading-lg h2">Sazon</h2><p>Led by award-winning Chef Andrew Walsh, experience the neighborhood Spanish hideaway on Batu Bolong, where vibrant atmosphere meets authentic flavours.</p><p>Open 8am - 10pm everyday. </p> <p>Mon - Thurs Open 8am - 9pm<br>Fri - Sat Open Noon - 4am</p>
                 button-link: #
                 button-text: Explore Sazon
         color-scheme: mint-300
