--- a/temp.html
+++ b/temp.html
@@ -29,10 +29,31 @@ blocks:
                 alt: Gallery image 1
             -
                 image: /uploads/beach-house-1.jpg
-                alt: Gallery image 1
+                alt: Gallery image 2
             -
                 image: /uploads/beach-house-1.jpg
-                alt: Gallery image 1
+                alt: Gallery image 3
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 4
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 5
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 6
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 7
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 8
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 9
+            -
+                image: /uploads/beach-house-1.jpg
+                alt: Gallery image 10
     - 
         _id: highlights
         heading: The Highlights
