Updated 4 files via CloudCannon.

--- a/gallery.html
+++ b/gallery.html
@@ -6,7 +6,9 @@ header:
 blocks:
     -
         _id: banner-video
-        block-content-html: <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto" style="max-height:70vh;">
+        block-content-html: >-
+            <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
+            style="max-height:70vh;">
         videos:
             -
                 video_path: /uploads/test-50k-kbs-wave-hb.mp4
@@ -19,19 +21,18 @@ blocks:
         overlay-opacity: 0.5op
         min-height: 90vh
         color-scheme: dark
-
-    - 
+    -
         _id: gallery
-        heading: Regent Bali Canggu Gallery 
-        images: 
+        heading: Regent Bali Canggu Gallery
+        images:
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-41.jpg
                 alt: Gallery image 1
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-47.jpg
                 alt: Gallery image 2
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-46.jpg
                 alt: Gallery image 3
             -
                 image: /uploads/beach-house-1.jpg
@@ -54,7 +55,6 @@ blocks:
             -
                 image: /uploads/beach-house-1.jpg
                 alt: Gallery image 10
-
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: >-
