Updated 9 files via CloudCannon.

--- a/gallery.html
+++ b/gallery.html
@@ -35,26 +35,29 @@ blocks:
                 image: /uploads/rectangle-46.jpg
                 alt: Gallery image 3
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-48.jpg
                 alt: Gallery image 4
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-49.jpg
                 alt: Gallery image 5
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-50.jpg
                 alt: Gallery image 6
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-51.jpg
                 alt: Gallery image 7
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-52.jpg
                 alt: Gallery image 8
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-53.jpg
                 alt: Gallery image 9
             -
-                image: /uploads/beach-house-1.jpg
+                image: /uploads/rectangle-54.jpg
                 alt: Gallery image 10
+            -
+                image: /uploads/rectangle-55.jpg
+                alt: Gallery image 11
 seo:
     title: Regent Website Proposal | Kelapa Creative
     description: >-
