Updated 2 files via CloudCannon.

--- a/gallery.html
+++ b/gallery.html
@@ -8,10 +8,10 @@ blocks:
         _id: banner-video
         block-content-html: >-
             <img src="/uploads/bali-canggu.svg" class="w-4/5 sm:w-1/2 mx-auto"
-            style="max-height:70vh;">
+            style="max-height:70vh;" />
         videos:
             -
-                video_path: /uploads/test-50k-kbs-wave-hb.mp4
+                video_path: /uploads/gallery.mp4
                 video_type: mp4
         placeholder_image: /uploads/videos/ocean-cover.jpg
         controls: false
