Updated 1 file via CloudCannon.

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ blocks:
                 background-desktop-image: /uploads/taru1.jpg
                 background-mobile-image: /uploads/taru1.jpg
                 block-content-html: >-
-                    <h3 class="heading-lg h2">Taur</h2><p>The signature culinary destination of the resort, Taru offers an immersive dining experience, through reinvented authentic flavours of essential Indonesian dishes, innovated by touches of modern cooking techniques and ingredients, balanced with contrasting international specialties.</p><p>Open 7am - 10pm everyday. </p>
+                    <h3 class="heading-lg h2">Taru</h2><p>The signature culinary destination of the resort, Taru offers an immersive dining experience, through reinvented authentic flavours of essential Indonesian dishes, innovated by touches of modern cooking techniques and ingredients, balanced with contrasting international specialties.</p><p>Open 7am - 10pm everyday. </p>
                 button-link: #
                 button-text: Explore Taru
 
