--- a/Wellness.html
+++ b/Wellness.html
@@ -162,7 +162,7 @@ blocks:
                 breeze to rebalance the mind and body.</p>
             color-scheme: mint-400
         text-alignment: left
-        image: /uploads/pool-view.jpg
+        image: /uploads/pool-view-1500.jpg
         image-alt: pool view
     -
         _id: grid-simple-2-col-overlap
@@ -171,7 +171,7 @@ blocks:
             block-content-html: "<h2>Health club</h2><p>Begin or end the day in the best possible way. Maintain your fitness regime in the resort's\_Health Club with dual-functional spaces enabling exercise enthusiasts to stretch, breathe and practice yoga in the mat-based studio, or elevate their heart rate in the spacious gym.</p>"
             color-scheme: mint-400
         text-alignment: left
-        image: /uploads/health-club-2.jpg
+        image: /uploads/health-club-2-1500.jpg
         image-alt: pool view
     -
         _id: grid-simple-2-col-overlap
