--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -37,17 +37,15 @@ blocks:
         _id: rooms
         room-style:
             -
-                heading: STUDIO SUITES
+                heading: STUDIO SUITE
                 img: /uploads/studio-suites.jpg
                 rooms:
                     -
                         name: Ocean View King
                         size: 76
                         bed-size: KING BED
-                        sleeps: 2
+                        sleeps: 3
                         extra-feature:
-                            -
-                            -
                         content: >-
                             Gaze across the Indian Ocean from your private
                             balcony. Indoors find a king bed and a serene
@@ -93,17 +91,15 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
             -
-                heading: ONE BEDROOM SUITES
+                heading: ONE BEDROOM SUITE
                 img: /uploads/one-bedroom-suites.jpg
                 rooms:
                     -
                         name: One Bedroom Ocean View King
-                        size: 86
+                        size: 936
                         bed-size: KING BED
                         sleeps: 3
                         extra-feature:
-                            -
-                            -
                         content: >-
                             Perched above the coastline, this One Bedroom Suite
                             pairs tranquil seclusion with sweeping ocean views.
@@ -149,7 +145,7 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
             -
-                heading: TWO BEDROOM SUITES
+                heading: TWO BEDROOM SUITE
                 img: /uploads/two-bedroom-suites.jpg
                 rooms:
                     -
@@ -186,7 +182,7 @@ blocks:
                             all‑day breakfast, and  assistance from a Regent
                             Experience Agent elevate your stay.&nbsp;
             -
-                heading: PREMIUM ONE BEDROOM SUITES
+                heading: PREMIUM ONE BEDROOM SUITE
                 img: /uploads/premium-one-bedroom-suites.jpg
                 rooms:
                     -
@@ -256,7 +252,7 @@ blocks:
                     -
                         name: Oceanfront Private Pool Penthouse
                         size: 618
-                        bed-size: 'KING BED & Twin Beds '
+                        bed-size: 'KING BED & TWIN BEDS'
                         sleeps: 6
                         extra-feature:
                             -
