--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@ blocks:
             xx <br />Canggu, Kuta Utara<br />Badung, Bali,
             Indonesia</h3></div></p><p></p><p></p><a class="button-featured"
             href="#"> RESERVE NOW</a>
+        bottom-text:
+            links: 
+                - 
+                    text: +62 361 201 9999
+                    url: tel:623612019999
+                -
+                    text: Enquires
+                    url: mailto:events@regentbalicanggu.com
+                -
+                    text: Offers 
+                    url: #
         overlay-color-scheme: mint-400
         content-max-width: 35rem
         text-alignment: center
