--- a/weddings-and-events.html
+++ b/weddings-and-events.html
@@ -31,8 +31,14 @@ blocks:
             beachfront location, coupled with the above and beyond nature of
             Regent service, will assure a memorable event.</p>
         bottom-text:
-                block-content-html: >-
-                    <p class="engravers-gothic"><a href="tel:623612019999">TEL: +62 361 201 9999</a></p><p class="engravers-gothic"><a href="mailto:events@regentbalicanggu.com">events@regentbalicanggu.com</a></p>
+                block-content-html: 
+                    links:
+                    - 
+                        text: +62 361 201 9999
+                        url: tel:623612019999
+                    -
+                        text: events@regentbalicanggu.com
+                        url: mailto:events@regentbalicanggu.com
         overlay-color-scheme: mint-400
         content-max-width: 75%
         text-alignment: center
