updated rooms to use aspect ratio logic

--- a/SUITES-and-VILLAS.html
+++ b/SUITES-and-VILLAS.html
@@ -39,6 +39,7 @@ blocks:
             -
                 heading: STUDIO SUITE
                 img: /uploads/studio-suites.jpg
+                img_aspect: Landscape
                 rooms:
                     -
                         name: Ocean View King
@@ -93,6 +94,7 @@ blocks:
             -
                 heading: ONE BEDROOM SUITE
                 img: /uploads/one-bedroom-suites.jpg
+                img_aspect: Landscape
                 rooms:
                     -
                         name: One Bedroom Ocean View King
@@ -147,6 +149,7 @@ blocks:
             -
                 heading: TWO BEDROOM SUITE
                 img: /uploads/two-bedroom-suites.jpg
+                img_aspect: Landscape
                 rooms:
                     -
                         name: Two Bedroom Lagoon Access
@@ -184,6 +187,7 @@ blocks:
             -
                 heading: PREMIUM ONE BEDROOM SUITE
                 img: /uploads/premium-one-bedroom-suites.jpg
+                img_aspect: Landscape
                 rooms:
                     -
                         name: Premium One Bedroom Ocean View
@@ -221,6 +225,7 @@ blocks:
             -
                 heading: PRIVATE VILLAS
                 img: /uploads/private-villas.jpg
+                img_aspect: Landscape
                 rooms:
                     -
                         name: Beachfront Private Pool Villa
@@ -248,6 +253,7 @@ blocks:
             -
                 heading: PENTHOUSE
                 img: /uploads/penthouse.jpg
+                img_aspect: Portrait
                 rooms:
                     -
                         name: Oceanfront Private Pool Penthouse
