Updated 4 files via CloudCannon.

--- a/dining-taru.html
+++ b/dining-taru.html
@@ -42,7 +42,7 @@ blocks:
                 <h3 class="sub-heading">CUISINE</h3><p>Indonesian</p><h3
                 class="sub-heading">LOCATION</h3><p>Poolside</p><h3
                 class="sub-heading">TEL.</h3><p>+62 361 2019999</p><h3
-                class="sub-heading">HOURS</h3><p>7am-10pm</p><h3
+                class="sub-heading">HOURS</h3><p>07.00 am - 10.00 pm</p><h3
                 class="sub-heading">EMAIL</h3><p>dining.regentbali@ihg.com</p>
             buttons:
                 -
