--- a/dining.html
+++ b/dining.html
@@ -37,8 +37,8 @@ blocks:
                 an immersive dining experience, through reinvented authentic
                 flavours of essential Indonesian dishes, innovated by touches of
                 modern cooking techniques and ingredients, balanced with
-                contrasting international specialties.<br /><br />Open 7am -
-                10pm everyday.</p>
+                contrasting international specialties.<br /><br />Open 07.00 am
+                - 10.00 pm every day.</p>
             buttons:
                 -
                     text: Discover more
@@ -66,7 +66,7 @@ blocks:
                 <p>A stunning addition to the Canggu coastline, the Beach House
                 lures with its shimmering pool, and ocean breeze. An ideal
                 setting for craft cocktails and the delicate flavours of the
-                sea.<br /><br /><br />Open 8am - 10pm everyday.</p>
+                sea.<br /><br /><br />Open 08.00 am - 10.00 pm every day.</p>
             buttons:
                 -
                     text: Discover more
@@ -98,7 +98,8 @@ blocks:
                 <p>Led by award-winning Chef Andrew Walsh, experience the
                 neighborhood Spanish hideaway on Batu Bolong, where vibrant
                 atmosphere meets authentic flavours.<br /><br /><br />Mon -
-                Thurs Open 8am - 9pm <br />Fri - Sat Open Noon - 4am</p>
+                Thurs Open 08.00 am - 09.00 pm<br />Fri - Sat Open Noon - 04.00
+                am</p>
             buttons:
                 -
                     text: Discover more
@@ -130,7 +131,7 @@ blocks:
                 <p>Lounge poolside, where private cabanas offer serene retreats,
                 and the gentle ripple of fountains blends with the rhythmic
                 crash of distant waves along the shore.<br /><br /><br /><br
-                />Open 7am - 7pm everyday.</p>
+                />Open 07.00 am - 07.00 pm every day. </p>
             buttons:
                 -
                     text: Discover more
